Ship and categories update, ammo belts.

--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -15,8 +15,11 @@
 		@shortName = M39A1
 		@roundsPerMinute = 1500
 		@bulletVelocity = 1030
-		@bulletType = 20x102mmBullet
+		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmHEBullet; 20x102mmHEBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -34,8 +37,11 @@
 		@shortName = M39A1
 		@roundsPerMinute = 1500
 		@bulletVelocity = 1030
-		@bulletType = 20x102mmBullet
+		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmHEBullet; 20x102mmHEBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -54,8 +60,11 @@
 		@shortName = AN/M3
 		@roundsPerMinute = 890
 		@bulletVelocity = 1030
-		@bulletType = 12.7mmBullet
+		@bulletType = 12.7mmAP; 12.7x99mmBullet;
 		@ammoName = .50cal
+		
+		%useCustomBelt = True    
+		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -73,8 +82,11 @@
 		@shortName = AN/M3
 		@roundsPerMinute = 890
 		@bulletVelocity = 1030
-		@bulletType = 12.7mmBullet
+		@bulletType = 12.7mmAP; 12.7x99mmBullet;
 		@ammoName = .50cal
+		
+		%useCustomBelt = True    
+		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -93,8 +105,11 @@
 		@shortName = ADEN
 		@roundsPerMinute = 1700
 		@bulletVelocity = 790
-		@bulletType = 30mmBullet
+		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x129mmShell; 30x129mmShell;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -112,8 +127,11 @@
 		@shortName = ADEN
 		@roundsPerMinute = 1700
 		@bulletVelocity = 790
-		@bulletType = 30mmBullet
+		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x129mmShell; 30x129mmShell;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -132,8 +150,11 @@
 		@shortName = DEFA
 		@roundsPerMinute = 1700
 		@bulletVelocity = 790
-		@bulletType = 30mmBullet
+		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x129mmShell; 30x129mmShell;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -151,8 +172,11 @@
 		@shortName = DEFA
 		@roundsPerMinute = 1700
 		@bulletVelocity = 790
-		@bulletType = 30mmBullet
+		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 30x129mmShell; 30x129mmShell;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -171,8 +195,11 @@
 		@shortName = N-37
 		@roundsPerMinute = 400
 		@bulletVelocity = 690
-		@bulletType = 37MMAP
+		@bulletType = 37MMAP; 37mmHERM;
 		@ammoName = 40mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 37MMAP; 37mmHERM; 37mmHERM; 37mmHERM
 		
 		%engageAir = true
 		%engageMissile = false
@@ -190,8 +217,11 @@
 		@shortName = N-37
 		@roundsPerMinute = 400
 		@bulletVelocity = 690
-		@bulletType = 37MMAP
+		@bulletType = 37MMAP; 37mmHERM;
 		@ammoName = 40mm
+		
+		%useCustomBelt = True    
+		%ammoBelt = 37MMAP; 37mmHERM; 37mmHERM; 37mmHERM
 		
 		%engageAir = true
 		%engageMissile = false
@@ -210,8 +240,11 @@
 		@shortName = NS-23
 		@roundsPerMinute = 850
 		@bulletVelocity = 690
-		@bulletType = 23x115mmBullet
+		@bulletType = 23x115mmBullet;
 		@ammoName = 20mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 23x115mmBullet; 23x115mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -229,8 +262,11 @@
 		@shortName = NR-23
 		@roundsPerMinute = 850
 		@bulletVelocity = 690
-		@bulletType = 23x115mmBullet
+		@bulletType = 23x115mmBullet;
 		@ammoName = 20mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 23x115mmBullet; 23x115mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -249,8 +285,11 @@
 		@shortName = NR-30
 		@roundsPerMinute = 1000
 		@bulletVelocity = 780
-		@bulletType = 30mmBullet
+		@bulletType = 30x173Bullet; 30x173HEBullet
 		@ammoName = 30mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet
 		
 		%engageAir = true
 		%engageMissile = false
@@ -268,8 +307,11 @@
 		@shortName = NR-30
 		@roundsPerMinute = 1000
 		@bulletVelocity = 780
-		@bulletType = 30mmBullet
+		@bulletType = 30x173Bullet; 30x173HEBullet
 		@ammoName = 30mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet
 		
 		%engageAir = true
 		%engageMissile = false
@@ -288,10 +330,13 @@
 		@shortName = M61A1
 		@roundsPerMinute = 6000
 		@bulletVelocity = 1080
-		@bulletType = 20mmBullet
+		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
 		
-		%engageAir = true
+		%useCustomBelt = True
+		%ammoBelt = 20x102mmHEBullet; 20x102mmHEBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet;
+		
+		%engageAir = true	
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
@@ -306,8 +351,11 @@
 		@shortName = M61A1
 		@roundsPerMinute = 6000
 		@bulletVelocity = 1080
-		@bulletType = 20mmBullet
+		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 20x102mmHEBullet; 20x102mmHEBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet;
 		
 		%engageAir = true
 		%engageMissile = false
@@ -326,8 +374,11 @@
 		@shortName = GSh-23L
 		@roundsPerMinute = 3600
 		@bulletVelocity = 715
-		@bulletType = 23x115mmBullet
+		@bulletType = 23x152mmHEBullet; 25x115mmBullet
 		@ammoName = 23mm
+		
+		%useCustomBelt = True
+		%ammoBelt = 25x115mmBullet; 23x152mmHEBullet; 23x152mmHEBullet; 23x152mmHEBullet;
 		
 		%engageAir = true
 		%engageMissile = false
