--- a/EW/Balancing/MM_AA.cfg
+++ b/EW/Balancing/MM_AA.cfg
@@ -53,3 +53,222 @@
 	%gravitic = False
 	%impulse = False
 }
+
+@PART[hispanoEnclosed]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[hispanoExposed]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[WW2Ho5WingMount]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[Mg151Long]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[Mg151Short]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[MG151WingPod]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[ShVAKWing]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[ShVAKBody]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[Bk75]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[WW2Ho155]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[Mk108]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[VickersShortPod]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[VYa23]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[BerezinUBK]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[BredaSAFATLong]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[BredaSAFATPort]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[WW2Ho3ExposedBarrel]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[M2Blister]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[M2ExposedBarrel]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[M2GunPort]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[M2Pod]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[MG131]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[shKAS]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[WW2R4MRocket]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[WW2RocketPod]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[BallTurret]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[MG131zTurret]:NEEDS[SMA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+
+
