--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -5,12 +5,24 @@
 
 @PART[bahaTurret]:NEEDS[SMA]:FOR[KKA] {
     @title = M2 Turret
+	
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
 }
 @PART[bahaGatlingGun]:NEEDS[SMA]:FOR[KKA] {
     @title = M61A1 Vulcan Turret
     @description = The General Electric M61A1 six-barrel, air-cooled, electrically fired Gatling-style rotary cannon widely used in military aircraft of the USAF.
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm M61A1
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[bahaABL]:NEEDS[SMA]:FOR[KKA] {
@@ -18,6 +30,11 @@
 	@description = The Boeing YAL-1 Airborne megawatt-class chemical oxygen iodine Laser Weapon System primarily designed as a missile defence system to destroy tactical ballistic missiles while in boost phase. The YAL-1 with a low-power laser was test-fired in flight at an airborne target in 2007. A high-energy laser was used to intercept a test target in January 2010.
 	@MODULE[ModuleWeapon] {
 		%shortName = YAL-1 ABL
+	
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[bahaAgm86B]:NEEDS[SMA]:FOR[KKA] {
@@ -48,6 +65,11 @@
 	@title = AN/M3 HMG
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm AN/M3 HMG
+
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[bahaClusterBomb]:NEEDS[SMA]:FOR[KKA] {
@@ -59,12 +81,24 @@
 }
 @PART[bahaH70Launcher]:NEEDS[SMA]:FOR[KKA] {
 	@title = LAU-51/A FFAR Launcher
+	
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
 }
 @PART[bahaGau-8]:NEEDS[SMA]:FOR[KKA] {
 	@title = GAU-8/A Avenger
     @description = The General Electric GAU-8/A Avenger 30mm hydraulically driven seven-barrel Gatling-style cannon that is typically mounted in the A-10 Thunderbolt II, designed specifically for the anti-tank role,
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm GAU-8/A
+	
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[bahaGoalKeeper]:NEEDS[SMA]:FOR[KKA] {
@@ -72,6 +106,11 @@
     @description = The Thales Goalkeeper CIWS introduced in 1979 is an autonomous and completely automatic weapon system for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. Once activated the system using GAU-8/A automatically undertakes the entire air defence process from surveillance and detection to destruction, including the selection of the next priority target.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm Goalkeeper
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[GoalKeeperBDAcMk1]:NEEDS[SMA]:FOR[KKA] {
@@ -79,6 +118,11 @@
     @description = The Thales Goalkeeper EX-83 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. The prototype is missing target acquisition radar and so the target information must be fed to it separately.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm Goalkeeper
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[BDAcGKmk2]:NEEDS[SMA]:FOR[KKA] {
@@ -86,6 +130,11 @@
     @description = The Thales Goalkeeper EX-84 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. The prototype is missing target acquisition radar, but it has a Link 16 to gather data from other crafts as well as IR optical targeting capability.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm Goalkeeper
+	
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[bahaHarm]:NEEDS[SMA]:FOR[KKA] {
@@ -122,10 +171,10 @@
 		%shortName = 120mm M256
 		@weaponType = ballistic
 		
-		%engageAir = false
-		%engageMissile = false
-		%engageGround = true
-		%engageSLW = false
+			%engageAir = false
+			%engageMissile = false
+			%engageGround = true
+			%engageSLW = false
 	}
 	@RESOURCE[CannonShells] {
 		@amount = 40
@@ -169,14 +218,14 @@
 }
 @PART[bahaOMillennium]:NEEDS[SMA]:FOR[KKA] {
 	@title = GDM-008 Millennium Gun
-	@description = The Rheinmetall Oerlikon GDM-008 "Millennium Gun" CIWS is a defensive weapon with time detonated projectiles controlled by an external fire-control system. The gun's ammunition capacity allows it to engage 10 anti-ship missiles or 20 surface targets. It is fitted with an optional onboard observation TV camera which relays imagery to an operator console from which it can also be aimed and fired in an emergency mode.
+	@description = The Rheinmetall Oerlikon GDM-008 "Millennium Gun" CIWS is a defensive weapon with time detonated projectiles controlled by an external fire-control system. The gun's ammunition capacity allows it to	%engage 10 anti-ship missiles or 20 surface targets. It is fitted with an optional onboard observation TV camera which relays imagery to an operator console from which it can also be aimed and fired in an emergency mode.
 	@MODULE[ModuleWeapon] {
 		%shortName = 35mm Millennium Gun
 	}
 }
 @PART[bahaPac-3]:NEEDS[SMA]:FOR[KKA] {
 	@title = MIM-104C Patriot
-	@description = The Raytheon MIM-104C "Patriot" Medium-to-Long Range Surface-to-Air Missile is a part of the PAC-2 Standard upgrade for the Patriot System. This missile is optimized for ballistic missile engagements. Major changes to the PAC-2 missile were the size of the projectiles in its blast-fragmentation warhead and the timing of the fuse, which was optimized for high-speed engagements. PAC-2 reached Army units in 1990, just in time for deployment to the Middle East for the Persian Gulf War. It was there that Patriot was first regarded as a successful ABM system and proof that ballistic missile defence was indeed possible.
+	@description = The Raytheon MIM-104C "Patriot" Medium-to-Long Range Surface-to-Air Missile is a part of the PAC-2 Standard upgrade for the Patriot System. This missile is optimized for ballistic missile	%engagements. Major changes to the PAC-2 missile were the size of the projectiles in its blast-fragmentation warhead and the timing of the fuse, which was optimized for high-speed	%engagements. PAC-2 reached Army units in 1990, just in time for deployment to the Middle East for the Persian Gulf War. It was there that Patriot was first regarded as a successful ABM system and proof that ballistic missile defence was indeed possible.
 	@MODULE[MissileLauncher] {
 		%shortName = MIM-104C Patriot
 	}
@@ -230,3 +279,63 @@
 		%shortName = BGM-71A TOW
 	}
 }
+@PART[BahaF86Launcher]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[bahaH70Turret]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[bahaM102Howitzer]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[bahaM230ChainGun]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+@PART[bahaOMillennium]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[bdImpulseGun]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[bahaS-8Launcher]:NEEDS[SMA]:FOR[KKA] {
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+}
+
+
+
+
