--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -14,6 +14,12 @@
 	@explosive = False
 	@tntMass = 0
 }
+@BULLET[20x110mmHEShell]:NEEDS[SMA] {
+	@tntMass = 0.008
+}
+@BULLET[120mmBulletSabot]:NEEDS[SMA] {
+	@apBulletMod = 1.55
+}
 @BULLET[12.7mmHEBullet]:NEEDS[SMA] {
 	@tntMass = 0.0014
 }
@@ -43,6 +49,7 @@
 }
 @BULLET[23x115mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.011
+	@incendiary = true
 }
 @BULLET[25x115mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.015
