--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -2,6 +2,7 @@
 //CHINA
 //CHN
 
+
 @PART[89Zjq]:NEEDS[SMA] {
 	@title = Type 89 HMG
 	@description = The Norinco Type 89 Heavy Machine Gun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
@@ -86,6 +87,11 @@
 	@description = The H/PJ12 / Type 730 seven-barrelled 30 mm Gatling gun CIWS. It is mounted in an enclosed automatic turret and directed by radar, and electro-optical tracking systems. The maximum rate of fire is 5800 rpm, and the effective range is up to 3 km.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm Type 730
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
 	}
 	MODULE {
 		name = ModuleCASE
@@ -104,6 +110,11 @@
 	@description = The Norinco Type 09 / PGZ09 (09式自行高射炮) self-propelled anti-aircraft vehicle. It is armed with two 35mm PG99 / GDF-002 cannons and optionally two fire-and-forget infrared homing missiles. It started to gradually replace the predecessor Type 95 in 2009.
 	@MODULE[ModuleWeapon] {
 		%shortName = 35mm PG99
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 	MODULE {
 		name = ModuleCASE
@@ -287,6 +298,11 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 7.62mm MG 3
 		@bulletType = 7.62x54mmBullet
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[HS404]:NEEDS[SMA] {
@@ -378,7 +394,7 @@
 }
 @PART[9M121]:NEEDS[SMA] {
 	@title = 9M127 Vikhr
-	@description = The KBP-IDB 9M127 "Vikhr" (AT-16) "Scallion" laser-guided Anti-Tank Guided Missile of the 9K121 complex accepted into service in the Soviet Union in 1990. The missile can be launched from warships, Ka-50 and Ka-52 helicopters, and Su-25T aircraft. The missile is designed to engage vital ground targets, including armoured targets fitted out with built-in and add-on explosive reactive armour, at a range of up to 8 km when fired from a helicopter and 10 km when fired from a fixed-wing aircraft in daytime and up to 5 km at night, as well as air targets in conditions of air defence assets activity.
+	@description = The KBP-IDB 9M127 "Vikhr" (AT-16) "Scallion" laser-guided Anti-Tank Guided Missile of the 9K121 complex accepted into service in the Soviet Union in 1990. The missile can be launched from warships, Ka-50 and Ka-52 helicopters, and Su-25T aircraft. The missile is designed to	%engage vital ground targets, including armoured targets fitted out with built-in and add-on explosive reactive armour, at a range of up to 8 km when fired from a helicopter and 10 km when fired from a fixed-wing aircraft in daytime and up to 5 km at night, as well as air targets in conditions of air defence assets activity.
 	@rescaleFactor = 1.196581197
 	@mass = 0.045
 	@MODULE[MissileLauncher] {
@@ -415,10 +431,10 @@
 		%shortName = 30mm AK-630
 		@weaponType = ballistic
 		
-		%engageAir = true
-		%engageMissile = true
-		%engageGround = false
-		%engageSLW = false
+			%engageAir = true
+			%engageMissile = true
+			%engageGround = false
+			%engageSLW = false
 	}
 	RESOURCE {
 		name = 30x173Ammo
@@ -438,10 +454,10 @@
 		%shortName = 122mm 2A18
 		@weaponType = ballistic
 		
-		%engageAir = false
-		%engageMissile = false
-		%engageGround = true
-		%engageSLW = false
+			%engageAir = false
+			%engageMissile = false
+			%engageGround = true
+			%engageSLW = false
 	}
 }
 @PART[GSH230]:NEEDS[SMA] {
@@ -455,10 +471,10 @@
 		%shortName = 30mm 9A623 GSh-30-2
 		@weaponType = ballistic
 		
-		%engageAir = true
-		%engageMissile = false
-		%engageGround = false
-		%engageSLW = false
+			%engageAir = true
+			%engageMissile = false
+			%engageGround = true
+			%engageSLW = false
 	}
 }
 @PART[GSH301]:NEEDS[SMA] {
@@ -472,10 +488,10 @@
 		%shortName = 30mm 9A4071K GSh-30-1
 		@weaponType = ballistic
 		
-		%engageAir = true
-		%engageMissile = false
-		%engageGround = false
-		%engageSLW = false
+			%engageAir = true
+			%engageMissile = false
+			%engageGround = false
+			%engageSLW = false
 	}
 }
 @PART[HeavyERA]:NEEDS[SMA] {
@@ -513,6 +529,11 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm 6P50-1 Kord
 		@bulletType = 12.7x108mmBullet
+		
+			%engageAir = true
+			%engageMissile = false
+			%engageGround = true
+			%engageSLW = false
 	}
 }
 @PART[O120]:NEEDS[SMA] {
@@ -631,6 +652,11 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm M151 RWS
 		@bulletType = 12.7x99mmBullet
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[CROWS-30MM]:NEEDS[SMA] {
@@ -638,13 +664,18 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm M151 RWS
 		@bulletType = 30x173Bullet; 30x173HEBullet
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[M2HB]:NEEDS[SMA] {
 	@title = M2HB HMG
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm M2HB HMG
-		@bulletType = 12.7x81SRmmBulletAP; 12.7x81SRmmBulletHE
+		@bulletType = 12.7x99mmBullet; 12.7x81SRmmBulletAP
 	}
 }
 @PART[TOW2B]:NEEDS[SMA] {
@@ -663,5 +694,3 @@
 	@title = CB90-class fast assault craft
 	@description = The Dockstavarvet-Gotlandsvarvet Stridsbåt 90 H(alv) / CB90-class fast assault craft is a class of fast military assault craft used by several countries after being originally developed for the Swedish Navy. The 90 refers to the year of acceptance. The CB90 is an exceptionally fast and agile boat that can execute extremely sharp turns at high speed and its light weight, shallow draught, and twin water jets allow it to operate in shallow coastal waters. The CB 90 has been adopted by the navies of Norway, Greece, Mexico, the United States and Malaysia.
 }
-
-
