--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -75,7 +75,6 @@
 	}
 }
 
-
 // @PART[HHQ16C]:NEEDS[SMA] {
 	// @title = HQ-17A Red Banner
 	// @description = The HQ-17A "Red Banner" is an all-weather low to medium altitude, short-range surface-to-air missile system developed by China. Although reverse engineered from the Tor-M1, the HQ-17 is not a direct copy and instead features many improvements. Unlike the Tor system, the HQ-17 incorporates an indigenous all terrain tracked launch vehicle, a new identification friend or foe (IFF) antenna on top of the search radar, an electronically scanned array radar for better performance against jamming and the ability to datalink with other Chinese systems.
@@ -192,4 +191,13 @@
 	@title = Hongqi-9 system Point-defence Laser
 	@description = Hongqi-9 system Experimental laser for point-defence duties. Use with caution, causes sunburns.
 	-MODULE[ModuleTargetingCamera] {}
+	@MODULE[ModuleWeapon] {
+		%shortName = 7.62mm MG 3
+		@bulletType = 7.62x54mmBullet
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
+	}
 }
