--- a/EW/Balancing/MM_NMB.cfg
+++ b/EW/Balancing/MM_NMB.cfg
@@ -76,6 +76,7 @@
 @PART[FA-18C]:NEEDS[!JSI&SMA] {
 	-MODULE[ModuleRadar] {}
 	-MODULE[JSIExternalCameraSelector] {}
+	-MODULE[ModuleWeapon] {}
 }
 @INTERNAL[FA-18C]:NEEDS[!JSI] {
 	-MODULE[JSISetInternalCameraFOV] {}
