--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -304,7 +304,7 @@
 		%shortName = 30mm 2A42
 		@weaponType = ballistic
 		
-		%engageAir = false
+		%engageAir = true
 		%engageMissile = false
 		%engageGround = true
 		%engageSLW = false
