--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -15,8 +15,10 @@ CATEGORY {
 		list = 7,00'
 		list = 8,10'
 		list = 9,20'
-		list = 10,EW
-		list = 11,Radars
+		list = 10,30'
+		list = 11,Naval Weapon Systems
+		list = 19,EW
+		list = 20,Radars
 	}
 }
 
@@ -32,7 +34,7 @@ SUBCATEGORY {
 }
 SUBCATEGORY {
     name = Radars
-    icon = DataTransmitter_selected
+    icon = R&D_node_icon_largeelectrics
     FILTER {
 		CHECK {
 			type = name
@@ -140,8 +142,6 @@ SUBCATEGORY {
 		}
     }
 }
-
-
 SUBCATEGORY {
     name = 70'
     icon = number7
@@ -228,7 +228,7 @@ SUBCATEGORY {
 }
 SUBCATEGORY {
     name = 00'
-    icon = fuels_oxidizer
+    icon = number0
 	//Add Engines
 	FILTER {
 		CHECK {
@@ -304,30 +304,96 @@ SUBCATEGORY {
 		}
     }
 }
+SUBCATEGORY {
+    name = Naval Weapon Systems
+    icon = boat
+    FILTER {
+		CHECK {
+			type = name
+			value = NAS_BC_283x3_KM, AK100a18, AK130turret, AK176, AK190, CH-100MM, H/PJ-38, NAS_CB_12inx3Mk8_USN, NAS_BB_BL14Mk7x4_RN, NAS_FD_356FortDrum_USA, NAS_BB_356x2_IJN, NAS_BB_380M1935x4_FNFL, NAS_BB_BL15Mk1x2_RN, NAS_BB_380x2_KM, NAS_BB_381x3_RM, NAS_BB_406x3Mk7_USN, NAS_BB_410x2_IJN, NAS_BB_BL16MkIx3_RN, NAS_BB_460x3_IJN, NAS_AA_SC_90A1938_RM, NAS_AA_SC_3inchMark21_USN, NAS_CD_105SKL40_CN, NAS_DD_QF45_RN, NAS_DD_127_USN, NAS_DD_127x2_IJN, NAS_DD_127x2_USN, NAS_DD_130B-2LM_SN, NAS_CL_152x3Mk16_USN, NAS_CL_155x3_IJN, NAS_CL_BL6inMk21x2_ROCN, NAS_CL_KN152_ROCN, NAS_CL_140x2_IJN, NAS_CA_180B-1-P_SN, NAS_CA_203x2_IJN, NAS_CA_203x2_KM, Rail176, NAS_CA_203x3Mk16_USN, theotomelara76compact, theotomelara76rapid
+		}
+    }
+}
 
 CATEGORY {
 	name = Naval Parts
 	icon = boat
 	colour = #FFF0F0F0
 	all = true
+
+	SUBCATEGORIES {
+		list = 0,All Parts
+		list = 1,Marine Drive
+		list = 2,Marine Command
+		list = 3,Marine Structural
+		list = 4,Carriers
+		list = 14,0d
+		list = 15,3d
+		list = 16,7d
+		list = 17,11d
+		list = 18,22d
+		list = 19,27d
+	}
+}
 	
-	FILTER {
+
+SUBCATEGORY {
+    name = 0d
+	icon = number0
+    FILTER {
 		CHECK {
-			type = folder
-			value = LShipPartsModern, LShipPartsRequired, LShipPartsWW2, SM_Marine
+			type = title
+			value = Ship 0°
 		}
-	}
-	
-	SUBCATEGORIES
-	{
-		List = 0,Modern Ships
-		list = 1,Cruisers & Destroyers
-		list = 2,Capital Ships
-		list = 4,WWII Hulls
-		list = 5,Subs
-		list = 6,Marine Drive
-		list = 7,Marine Command
-		list = 8,Marine Structural
-		list = 9,SM Marine
-	}
+    }
+}
+SUBCATEGORY {
+    name = 3d
+	icon = number3
+    FILTER {
+		CHECK {
+			type = title
+			value = Ship 3°
+		}
+    }
+}
+SUBCATEGORY {
+    name = 7d
+	icon = number7
+    FILTER {
+		CHECK {
+			type = title
+			value = Ship 7°
+		}
+    }
+}
+SUBCATEGORY {
+    name = 11d
+	icon = number11
+    FILTER {
+		CHECK {
+			type = title
+			value = Ship 11°
+		}
+    }
+}
+SUBCATEGORY {
+    name = 22d
+	icon = number22
+    FILTER {
+		CHECK {
+			type = title
+			value = Ship 22°
+		}
+    }
+}
+SUBCATEGORY {
+    name = 27d
+	icon = number27
+    FILTER {
+		CHECK {
+			type = title
+			value = Ship 27°
+		}
+    }
 }
