--- a/EW/NavalGuns.cfg
+++ b/EW/NavalGuns.cfg
@@ -6,6 +6,11 @@
 		@shortName = 76mm OTO Rapid
 		@roundsPerMinute = 120
 		@heatPerShot = 55
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 +PART[AK100a18]:FINAL {
@@ -19,4 +24,3 @@
 		@heatPerShot = 57
 	}
 }
-
