--- a/Ships/MM.cfg
+++ b/Ships/MM.cfg
@@ -144,7 +144,11 @@ VARIANTTHEME {
 @PART[ship_0d|ship_3d|ship_7d|ship_11d|ship_22d|ship_27d|ship_3di|ship_7di|ship_11di|ship_22di|ship_27di] {
 	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
 		%amount = 1
-		%maxAmount = 70
+		%maxAmount = 80
+	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 50000
 	}
 }
 @PART[ship_*2] {
@@ -152,11 +156,19 @@ VARIANTTHEME {
 		%amount = 1
 		%maxAmount = 160
 	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 100000
+	}
 }
 @PART[ship_*4] {
 	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
 		%amount = 1
 		%maxAmount = 400
+	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 200000
 	}
 }
 @PART[ship_*8] {
@@ -164,16 +176,523 @@ VARIANTTHEME {
 		%amount = 1
 		%maxAmount = 800
 	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 400000
+	}
 }
 @PART[ship_*16] {
 	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
 		%amount = 1
 		%maxAmount = 2000
 	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 800000
+	}
 }
 @PART[ship_*bow] {
 	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
 		%amount = 1
 		%maxAmount = 3000
+	}
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		%ArmorThickness = 25
+		%maxHitPoints = 500000
+	}
+}
+
++PART[ship_0d] {
+	@name = ship_0dx15
+	@rescaleFactor = 1.5
+	@title = Ship 0° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_0d2] {
+	@name = ship_0d2x15
+	@rescaleFactor = 1.5
+	@title = Ship 0° Hull-x2 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_0d8] {
+	@name = ship_0d8x15
+	@rescaleFactor = 1.5
+	@title = Ship 0° Hull-x8 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_0d16] {
+	@name = ship_0d16x15
+	@rescaleFactor = 1.5
+	@title = Ship 0° Hull-x16 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
+
++PART[ship_3d] {
+	@name = ship_3dx15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_3d2] {
+	@name = ship_3d2x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x2 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_3d8] {
+	@name = ship_3d8x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x8 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_3d16] {
+	@name = ship_3d16x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x16 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
++PART[ship_3di] {
+	@name = ship_3dix15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_3di2] {
+	@name = ship_3di2x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x2 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_3di8] {
+	@name = ship_3di8x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x8 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_3di16] {
+	@name = ship_3di16x15
+	@rescaleFactor = 1.5
+	@title = Ship 3° Hull-x16 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
+
++PART[ship_7d] {
+	@name = ship_7dx15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_7d2] {
+	@name = ship_7d2x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x2 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_7d8] {
+	@name = ship_7d8x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x8 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_7d16] {
+	@name = ship_7d16x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x16 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
++PART[ship_7di] {
+	@name = ship_7dix15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_7di2] {
+	@name = ship_7di2x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x2 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_7di8] {
+	@name = ship_7di8x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x8 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_7di16] {
+	@name = ship_7di16x15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Hull-x16 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
++PART[ship_7bow] {
+	@name = ship_7bowx15
+	@rescaleFactor = 1.5
+	@title = Ship 7° Bow Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 750000
+	}
+}
+
++PART[ship_11d] {
+	@name = ship_11dx15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_11d2] {
+	@name = ship_11d2x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x2 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_11d8] {
+	@name = ship_11d8x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x8 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_11d16] {
+	@name = ship_11d16x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x16 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
++PART[ship_11di] {
+	@name = ship_11dix15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_11di2] {
+	@name = ship_11di2x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x2 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_11di8] {
+	@name = ship_11di8x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x8 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 600000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 1200
+	}
+}
++PART[ship_11di16] {
+	@name = ship_11di16x15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Hull-x16 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 1200000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 2500
+	}
+}
++PART[ship_11bow] {
+	@name = ship_11bowx15
+	@rescaleFactor = 1.5
+	@title = Ship 11° Bow Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 750000
+	}
+}
+
++PART[ship_22d] {
+	@name = ship_22dx15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_22d2] {
+	@name = ship_22d2x15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull-x2 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_22d4] {
+	@name = ship_22d4x15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull-x4 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 300000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 600
+	}
+}
++PART[ship_22di] {
+	@name = ship_22dix15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_22di2] {
+	@name = ship_22di2x15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull-x2 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 150000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 300
+	}
+}
++PART[ship_22di4] {
+	@name = ship_22di4x15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Hull-x4 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 300000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 600
+	}
+}
++PART[ship_22bow] {
+	@name = ship_22bowx15
+	@rescaleFactor = 1.5
+	@title = Ship 22° Bow Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 750000
+	}
+}
+
+
++PART[ship_27d] {
+	@name = ship_27dx15
+	@rescaleFactor = 1.5
+	@title = Ship 27° Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_27d4] {
+	@name = ship_27d4x15
+	@rescaleFactor = 1.5
+	@title = Ship 27° Hull-x4 Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 300000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 600
+	}
+}
++PART[ship_27di] {
+	@name = ship_27dix15
+	@rescaleFactor = 1.5
+	@title = Ship 27° Hull Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 75000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 160
+	}
+}
++PART[ship_27di4] {
+	@name = ship_27di4x15
+	@rescaleFactor = 1.5
+	@title = Ship 27° Hull-x4 Inverted Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 300000
+	}
+	%RESOURCE[SeaWater]:NEEDS[HullBreach] {
+		%amount = 1
+		%maxAmount = 600
+	}
+}
++PART[ship_27bow] {
+	@name = ship_27bowx15
+	@rescaleFactor = 1.5
+	@title = Ship 27° Bow Hull Enlarged
+	@MODULE[HitpointTracker]:NEEDS[BDArmory] {
+		@maxHitPoints = 750000
 	}
 }
