--- a/Ships/ship_3d.cfg
+++ b/Ships/ship_3d.cfg
@@ -45,7 +45,7 @@
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dx2
+	name = ship_3d2
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -91,7 +91,7 @@ PART {
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dx8
+	name = ship_3d8
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -137,7 +137,7 @@ PART {
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dx16
+	name = ship_3d16
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -232,7 +232,7 @@ PART {
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dix2
+	name = ship_3di2
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -278,7 +278,7 @@ PART {
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dix8
+	name = ship_3di8
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -324,7 +324,7 @@ PART {
 }
 PART {
 	// --- general parameters ---
-	name = ship_3dix16
+	name = ship_3di16
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
